# bcb-cosif

./: .gitignore  README.md  pyproject.toml
src/: etl.py  output.csv
src/crawler/: extract.py  main.py
