[project]
name = "cosif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "pandas>=2.2.3",
    "python-bcb>=0.3.0",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
]
